[gd_scene load_steps=2 format=2]

[ext_resource path="res://examples/simple_server/SimpleClient.gd" type="Script" id=1]

[node name="SimpleClient" type="PanelContainer"]
margin_right = 574.0
margin_bottom = 62.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 567.0
margin_bottom = 55.0

[node name="hbox" type="HBoxContainer" parent="vbox"]
margin_right = 560.0
margin_bottom = 20.0

[node name="id" type="Label" parent="vbox/hbox"]
margin_top = 3.0
margin_right = 88.0
margin_bottom = 17.0
text = "Simple client!"

[node name="sep" type="Control" parent="vbox/hbox"]
margin_left = 92.0
margin_right = 474.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="ButtonDisconnect" type="Button" parent="vbox/hbox"]
margin_left = 478.0
margin_right = 560.0
margin_bottom = 20.0
text = "disconnect"

[node name="hbox2" type="HBoxContainer" parent="vbox"]
margin_top = 24.0
margin_right = 560.0
margin_bottom = 48.0

[node name="InputText" type="LineEdit" parent="vbox/hbox2"]
margin_right = 205.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "my text"

[node name="ButtonSetText" type="Button" parent="vbox/hbox2"]
margin_left = 209.0
margin_right = 270.0
margin_bottom = 24.0
disabled = true
text = "set text"

[node name="InputNumber" type="SpinBox" parent="vbox/hbox2"]
margin_left = 274.0
margin_right = 348.0
margin_bottom = 24.0
value = 100.0
allow_greater = true
allow_lesser = true

[node name="ButtonSetNumber" type="Button" parent="vbox/hbox2"]
margin_left = 352.0
margin_right = 438.0
margin_bottom = 24.0
disabled = true
text = "set number"

[node name="ButtonColor" type="ColorPickerButton" parent="vbox/hbox2"]
margin_left = 442.0
margin_right = 487.0
margin_bottom = 24.0
text = "Color"
color = Color( 1, 0.656677, 0.121094, 1 )

[node name="ButtonSetColor" type="Button" parent="vbox/hbox2"]
margin_left = 491.0
margin_right = 560.0
margin_bottom = 24.0
disabled = true
text = "Set Color"

[connection signal="pressed" from="vbox/hbox/ButtonDisconnect" to="." method="_on_ButtonDisconnect_pressed"]
[connection signal="pressed" from="vbox/hbox2/ButtonSetText" to="." method="_on_ButtonSetText_pressed"]
[connection signal="pressed" from="vbox/hbox2/ButtonSetNumber" to="." method="_on_ButtonSetNumber_pressed"]
[connection signal="pressed" from="vbox/hbox2/ButtonSetColor" to="." method="_on_ButtonSetColor_pressed"]
